PDO php database_class

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     <!--Projects-->
     <section id="projects-div">
-        <h1 v>Projects</h1>
+        <h1 class="h1-div">Projects</h1>
         <p id="skillsp" class="s-b-paragraph">
             Love to code. Love to waste time on doing projects made me a better coder.
 I am presenting some projects that I have done during my short career as a programmer. They are made for school projects, made during the course as Full-Stack Web Developer, and personal projects. You can see them in several different tabs as follows.
